<resources>
	<string name="app_name">"JANDI"</string>
	<string name="comment">"Comment"</string>
	<string name="err_delete_file">"File could not be deleted"</string>
	<string name="err_download">"File could not be downloaded"</string>
	<string name="err_email_exists">"That email is already registered"</string>
	<string name="err_entity_create">"Create unsuccessful"</string>
	<string name="err_entity_delete">"Delete unsuccessful"</string>
	<string name="err_entity_duplicated_name">"That name is already taken. Please try again."</string>
	<string name="err_entity_invite">"Invite unsuccessful"</string>
	<string name="err_entity_join">"Join unsuccessful"</string>
	<string name="err_entity_leave">"Leave unsuccessful"</string>
	<string name="err_entity_modify">"Rename unsuccessful"</string>
	<string name="err_expired_session">"Session has expired. Please sign in again."</string>
	<string name="err_expired_token">"Expired Token"</string>
	<string name="err_file_already_shared_all_topics">"File is already shared in all your topics"</string>
	<string name="err_file_detail">"Failed to load the file detail. Please try again"</string>
	<string name="err_file_has_not_been_shared">"File has not been shared"</string>
	<string name="err_file_search">"No files found"</string>
	<string name="err_file_upload_failed">"File could not be uploaded"</string>
	<string name="err_invalid_team_domain">"Invalid domain"</string>
	<string name="err_invitation_failed">"Invitation could not be sent"</string>
	<string name="err_login">"Sign in unsuccessful"</string>
	<string name="err_login_invalid_id">"Email address is not valid"</string>
	<string name="err_login_invalid_id_or_password">"Invaild account or password"</string>
	<string name="err_login_invalid_info">"Password do not match"</string>
	<string name="err_login_invalid_passwd">"Password is not correct"</string>
	<string name="err_login_unregistered_id">"We could not find your account on JANDI"</string>
	<string name="err_messages_delete">"Message could not be deleted"</string>
	<string name="err_messages_get">"Failed to load messages. Please try again"</string>
	<string name="err_messages_invaild_entity">"Invalid Topic"</string>
	<string name="err_messages_modify">"Message could not be edited"</string>
	<string name="err_messages_send">"Message could not be sent"</string>
	<string name="err_network">"Please check your network connection"</string>
	<string name="err_profile_empty_info">"Please fill in"</string>
	<string name="err_profile_exceed_length_of_division">"Department name can't be longer than 60 characters"</string>
	<string name="err_profile_exceed_length_of_phone">"Mobile number can't be longer than 20 characters"</string>
	<string name="err_profile_exceed_length_of_position">"Title can't be longer than 60 characters"</string>
	<string name="err_profile_exceed_length_of_status_message">"Status message can't be longer than 60 characters"</string>
	<string name="err_profile_exceed_length_of_topic_name">"Topic name can't be longer than 60 characters"</string>
	<string name="err_profile_get_info">"Failed to load the profile. Please try again"</string>
	<string name="err_profile_photo_upload">"Profile photo could not be updated"</string>
	<string name="err_profile_unmodified">"No changes to apply"</string>
	<string name="err_profile_update">"Profile could not be updated"</string>
	<string name="err_push_invalid_device">"Push notifications are not supported on this device"</string>
	<string name="err_push_registration">"There is an error with the push server. Please try again."</string>
	<string name="err_service_connection">"Connection was lost. Please try again."</string>
	<string name="err_share">"File could not be shared"</string>
	<string name="err_team_creation_failed">"Email could not be sent"</string>
	<string name="err_unshare">"File could not be unshared"</string>
	<string name="err_unsupported_file_type">"There is no installed app that supports %1$s"</string>
	<string name="exclamation_mark">"!"</string>
	<string name="fail_to_create_team">"Team creation not completed"</string>
	<string name="file_upload_comment">"Comments (Optional)"</string>
	<string name="jadi_account_home">"Account Home"</string>
	<string name="jandi_1_1_message">"1:1 Message"</string>
	<string name="jandi_91_apk_store">"91 Apk Store"</string>
	<string name="jandi_about">"About"</string>
	<string name="jandi_account">"Account"</string>
	<string name="jandi_account_home_help">"Join multiple teams using one account.Each account can also hold multiple email addresses.Assign one email to each team to let members know how to contact you."</string>
	<string name="jandi_action_create_team">"Create Team"</string>
	<string name="jandi_action_delete">"Delete"</string>
	<string name="jandi_action_direct_message">"Direct Message"</string>
	<string name="jandi_action_download">"Download"</string>
	<string name="jandi_action_invite">"Invite"</string>
	<string name="jandi_action_leave">"Leave"</string>
	<string name="jandi_action_login">"Sign in"</string>
	<string name="jandi_action_menu_message_copy">"Copy"</string>
	<string name="jandi_action_more">"More"</string>
	<string name="jandi_action_rename">"Rename"</string>
	<string name="jandi_action_search">"Search"</string>
	<string name="jandi_action_share">"Share"</string>
	<string name="jandi_action_starred">"Star"</string>
	<string name="jandi_action_start">"Sign Up"</string>
	<string name="jandi_action_unshare">"Unshare"</string>
	<string name="jandi_action_update">"Update"</string>
	<string name="jandi_add">"Add"</string>
	<string name="jandi_add_an_email_address">"Add an Email Address"</string>
	<string name="jandi_alert_already_topic_owenr">"You already are this topic's admin."</string>
	<string name="jandi_all_of_topic_members">"@All (topic members)"</string>
	<string name="jandi_already_in_team">"This email is already a member of %s"</string>
	<string name="jandi_already_linked_email">"This email is already linked to your account"</string>
	<string name="jandi_announcement_create">"Announce"</string>
	<string name="jandi_announcement_create_question">"The current announcement will be replaced with this message. Do you wish to continue?"</string>
	<string name="jandi_announcement_created">"%1$s posted %2$s's message as an announcement."</string>
	<string name="jandi_announcement_delete">"Delete"</string>
	<string name="jandi_announcement_delete_question">"This announcement will be removed. Are you sure you want to continue?"</string>
	<string name="jandi_announcement_deleted">"%s deleted the announcement."</string>
	<string name="jandi_announcement_minimize">"Hide"</string>
	<string name="jandi_are_you_sure_disable_external_link">"Access to the previously shared file will be revoked. Are you sure?"</string>
	<string name="jandi_ask_assign_topic_owner">"Are you sure you want to transfer topic administrator permissions to this member?"</string>
	<string name="jandi_ask_kick_user_from_topic">"Are you sure you want to remove this member from the topic?"</string>
	<string name="jandi_ask_to_leave_if_private_topic_owner">"You must transfer topic administrator permissions before you leave."</string>
	<string name="jandi_ask_to_leave_if_topic_owner">"You can transfer topic administrator permissions before you leave."</string>
	<string name="jandi_assign">"Transfer"</string>
	<string name="jandi_assign_topic_owner">"Transfer the topic admin permission"</string>
	<string name="jandi_assign_topic_owner_desc">"Topic admin holds permissions as below:
- Changing the topic name/descripiton
- Deleting the topic
- Forcing quit topic participants
- Pausing/Deleting JANDI Connect integrations"</string>
	<string name="jandi_auto_join_cannot_be_default_topic">"You cannot turn off auto invitation for the default topic."</string>
	<string name="jandi_auto_join_cannot_be_private_topic">"Auto invitation is only available in public topics."</string>
	<string name="jandi_auto_join_explain">"Invite all new members to this topic"</string>
	<string name="jandi_auto_join_title">"Auto Invitation"</string>
	<string name="jandi_auto_join_title_wild">"Auto Invitation*"</string>
	<string name="jandi_baidu_app_store">"Baidu App Store"</string>
	<string name="jandi_bot_role">"I deliver messages from JANDI Connect and essential notifications from our customer experience team"</string>
	<string name="jandi_bot_status">"Hello. I'm Mr. J."</string>
	<string name="jandi_browse_other_topics">"Browse other topics"</string>
	<string name="jandi_cancel">"Cancel"</string>
	<string name="jandi_canceled">"Canceled"</string>
	<string name="jandi_help">"Help"</string>
	<string name="jandi_off">"Off"</string>
	<string name="jandi_on">"On"</string>
	<string name="jandi_phone_led">"Phone LED"</string>
	<string name="jandi_preview_message_contents">"Preview Message Contents"</string>
	<string name="jandi_privacy_policy">"Privacy Policy"</string>
	<string name="jandi_privacy_protection">"Privacy"</string>
	<string name="jandi_profile_basic_info">"Basic Information"</string>
	<string name="jandi_profile_division">"Division"</string>
	<string name="jandi_profile_edit">"Edit"</string>
	<string name="jandi_profile_email">"Email"</string>
	<string name="jandi_profile_phone_number">"Mobile #"</string>
	<string name="jandi_profile_position">"Position"</string>
	<string name="jandi_profile_status_message">"Status"</string>
	<string name="jandi_push_preview_all_message">"All messages"</string>
	<string name="jandi_screen_auto">"Auto"</string>
	<string name="jandi_screen_orientation">"Screen Orientation"</string>
	<string name="jandi_set_passcode">"Set Passcode Lock"</string>
	<string name="jandi_setting_display">"Display"</string>
	<string name="jandi_setting_general">"GENERAL"</string>
	<string name="jandi_setting_notification">"Notification Settings"</string>
	<string name="jandi_setting_push">"NOTIFICATION PREFERENCES"</string>
	<string name="jandi_setting_push_subscription">"Push notifications"</string>
	<string name="jandi_setting_push_subscription_cancel">"Turned off"</string>
	<string name="jandi_setting_push_subscription_ok">"Turned on"</string>
	<string name="jandi_setting_sign_out">"Sign out"</string>
	<string name="jandi_setting_summary_led">"Flash LED on incoming notifications"</string>
	<string name="jandi_setting_summary_vibrate">"Vibrate on incoming notifications"</string>
	<string name="jandi_sounds">"Sounds"</string>
	<string name="jandi_starred_star">"Star"</string>
	<string name="jandi_starred_unstar">"Unstar"</string>
	<string name="jandi_tab_file">"Files"</string>
	<string name="jandi_tab_more">"More"</string>
	<string name="jandi_team_info">"Team"</string>
	<string name="jandi_term_of_service">"Terms of Service"</string>
	<string name="jandi_title_name">"Name"</string>
	<string name="jandi_topic_paricipants">"Participants"</string>
	<string name="jandi_topic_private">"Private"</string>
	<string name="jandi_topic_public">"Public"</string>
	<string name="jandi_topic_title">"Title"</string>
	<string name="jandi_topic_title_hint">"Title"</string>
	<string name="jandi_tos_and_pp">"<![CDATA[TERMS & CONDITIONS]]>"</string>
	<string name="jandi_vibrate">"Vibrate"</string>
	<string name="jandi_what_is_topic_type">"Topic type cannot be switched between public and private after creation"</string>
	<string name="member_profile">"Profile"</string>
	<string name="team_info">"Team Information"</string>
	<string name="url">"URL"</string>
	<string name="what_is_member_profile">"Enter the email address and profile name you want associated with this team. Please note that your teammates may view and use this information to mention, search, or directly contact you."</string>
	<string name="what_is_team_domain">"Choose your team's domain (URL) for signing in on the web. It's up to you as long as it is <b>3+ characters</b> and includes only letters, numbers, and hyphens (-)."</string>
</resources>