<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="setting_push_auto_alarm"
        android:summaryOff="@string/jandi_setting_push_subscription_cancel"
        android:summaryOn="@string/jandi_setting_push_subscription_ok"
        android:title="@string/jandi_setting_push_subscription" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="setting_push_alarm_sound"
        android:summaryOff="@string/jandi_off"
        android:summaryOn="@string/jandi_on"
        android:title="@string/jandi_sounds" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="setting_push_alarm_vibration"
        android:summary="@string/jandi_setting_summary_vibrate"
        android:title="@string/jandi_vibrate" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="setting_push_alarm_led"
        android:summary="@string/jandi_setting_summary_led"
        android:title="@string/jandi_phone_led" />
    <Preference
        android:defaultValue="0"
        android:entries="@array/jandi_pref_push_preview"
        android:entryValues="@array/jandi_pref_push_preview_values"
        android:key="setting_push_preview"
        android:summary="@string/jandi_push_preview_all_message"
        android:title="@string/jandi_preview_message_contents" />
</PreferenceScreen>