<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tosslab.jandi.app.FileDetailActivity">
    <item
        android:id="@+id/menu_overflow"
        android:icon="@drawable/jandi_icon_moremenu"
        android:showAsAction="always"
        android:title="@string/jandi_tab_more"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_file_detail_download"
                android:title="@string/jandi_action_download" />
            <item
                android:id="@+id/action_file_detail_share"
                android:title="@string/jandi_action_share" />
            <item
                android:id="@+id/action_file_detail_unshare"
                android:title="@string/jandi_action_unshare" />
            <item
                android:id="@+id/action_file_detail_starred"
                android:title="@string/jandi_starred_star" />
            <item
                android:id="@+id/action_file_detail_unstarred"
                android:title="@string/jandi_starred_unstar" />

        </menu>
    </item>
</menu>