<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_manipulate_my_entity"
        android:icon="@drawable/jandi_icon_actionbar_more"
        android:showAsAction="always"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_my_entity_invite"
                android:title="@string/jandi_action_invite" />
            <item
                android:id="@+id/action_my_entity_members"
                android:title="@string/jandi_topic_paricipants" />
            <item
                android:id="@+id/action_my_entity_leave"
                android:title="@string/jandi_action_leave" />
            <item
                android:id="@+id/action_my_entity_rename"
                android:title="@string/jandi_action_rename" />
            <item
                android:id="@+id/action_my_entity_delete"
                android:title="@string/jandi_action_delete" />
        </menu>
    </item>
</menu>