<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/jandi_team_info_whole_background"
        android:orientation="vertical">

        <TextView
            style="@style/JandiTeam.TextView.Title"
            android:text="@string/jandi_team_info" />

        <EditText
            android:id="@+id/et_team_detail_info_team_name"
            style="@style/JandiTeam.EditText"
            android:hint="@string/team_info" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp">

            <EditText
                android:id="@+id/et_team_detail_info_team_domain"
                style="@style/JandiTeam.EditText"
                android:layout_weight="1"
                android:hint="@string/url" />

            <TextView
                style="@style/JandiTeam.EditText"
                android:layout_width="wrap_content"
                android:enabled="false"
                android:gravity="center"
                android:text=".jandi.com"
                android:textColor="@color/jandi_text" />

        </LinearLayout>

        <TextView
            style="@style/JandiTeam.TextView.Explain"
            android:layout_marginTop="16dp"
            android:text="@string/what_is_team_domain" />

        <TextView
            style="@style/JandiTeam.TextView.Title"
            android:layout_marginTop="16dp"
            android:text="@string/member_profile" />

        <EditText
            android:id="@+id/et_team_detail_info_member_name"
            style="@style/JandiTeam.EditText"
            android:hint="이름"
            android:imeOptions="actionDone"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" />

        <Spinner
            android:id="@+id/spinner_team_detail_info_member_email"
            style="@style/JandiTeam.EditText"
            android:layout_marginTop="1dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:prompt="@string/jandi_profile_email" />

        <TextView
            style="@style/JandiTeam.TextView.Explain"
            android:layout_marginTop="16dp"
            android:text="@string/what_is_member_profile" />


    </LinearLayout>
</ScrollView>