<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_entity_search"
        android:icon="@drawable/jandi_icon_search"
        android:showAsAction="always"
        android:title="@string/jandi_action_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_entity_move_file_list"
        android:icon="@drawable/jandi_icon_file_search"
        android:showAsAction="always"
        android:title="@string/jandi_tab_file"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_entity_more"
        android:icon="@drawable/jandi_icon_detail"
        android:showAsAction="always"
        android:title="@string/jandi_tab_more"
        app:showAsAction="always" />

</menu>