<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/jandi_default_background"
    android:orientation="vertical"
    android:paddingBottom="16dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/layout_search_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:visibility="visible" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/profile_photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/circle_default_background_color" />

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/jandi_profile_edit_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="6dp"
            android:text="@string/jandi_profile_edit"
            android:textColor="@color/jandi_text_white" />
    </FrameLayout>

    <TextView
        android:id="@+id/profile_user_realname"
        style="@style/JandiMemberProfile.TextView.Default"
        android:hint="@string/jandi_title_name" />


    <TextView
        android:id="@+id/profile_user_email"
        style="@style/JandiMemberProfile.TextView.Default"
        android:layout_marginTop="20dp"
        android:hint="@string/jandi_profile_email"
        android:textColor="@color/jandi_text"
        android:textColorHint="@color/jandi_text_light" />

    <LinearLayout
        style="@style/JandiMemberProfile.Layout.Sub"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/profile_user_status_message"
            style="@style/JandiMemberProfile.TextView.Sub"
            android:hint="@string/jandi_profile_status_message" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/jandi_border_gray" />

        <TextView
            android:id="@+id/profile_user_phone_number"
            style="@style/JandiMemberProfile.TextView.Sub"
            android:hint="@string/jandi_profile_phone_number" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/jandi_border_gray" />

        <TextView
            android:id="@+id/profile_user_division"
            style="@style/JandiMemberProfile.TextView.Sub"
            android:hint="@string/jandi_profile_division" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_columnSpan="4"
            android:background="@color/jandi_border_gray" />

        <TextView
            android:id="@+id/profile_user_position"
            style="@style/JandiMemberProfile.TextView.Sub"
            android:hint="@string/jandi_profile_position" />

    </LinearLayout>

</LinearLayout>